Fix table alignment

--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -14,6 +14,10 @@ body {
   color: $primary-color;
 }
 
+table {
+  margin: auto;
+}
+
 picture {
   display: contents;
 }
